Fixed dataset names and paths

--- a/DataManagement/Missing values ann.ipynb
+++ b/DataManagement/Missing values ann.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f6f491e-2236-4c4c-bf1f-dc7d1eed2814",
    "metadata": {
     "tags": []
@@ -50,8 +50,8 @@
    "outputs": [],
    "source": [
     "# configuration parameters\n",
-    "DATA_PATH = os.path.join('..', '..', 'Data')\n",
-    "DATA_FILE = 'Base2020PETFINALcorregida.csv'\n",
+    "DATA_PATH = os.path.join('..', 'Data')\n",
+    "DATA_FILE = 'MainDataset.csv'\n",
     "\n",
     "# Dictionary with the cognitive variables used and nomenclature in English\n",
     "COGNITIVE_TEST = {\n",
