--- a/DataManagement/Pipeline validation cohort.ipynb
+++ b/DataManagement/Pipeline validation cohort.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "44292926-776c-4e63-9443-8cd446da08b1",
    "metadata": {
     "tags": []
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "INPUT_REPORTS = {\n",
-    "    'AD'   : os.path.join('..', 'data', '20240417_RAW_FDGPET_AD'),\n",
-    "    'bvFTD': os.path.join('..', 'data', '20240417_RAW_FDGPET_FTD')\n",
+    "    'AD'   : os.path.join('..', 'Data', 'DatasetforValidationReport_FDGPET_AD'),\n",
+    "    'bvFTD': os.path.join('..', 'Data', 'DatasetforValidationReport_FDGPET_FTD')\n",
     "}\n",
-    "COGNITIVE_DATA_FILE = os.path.join('..', 'data', '20240417_RevCortexNuevosEnviar.csv')\n",
+    "COGNITIVE_DATA_FILE = os.path.join('..', 'Data', 'DatasetforValidation.csv')\n",
     "\n",
     "AAL_ROIS = [\n",
     " 'precentral_l', 'precentral_r', 'postcentral_l', 'postcentral_r', 'rolandic_oper_l', 'rolandic_oper_r', \n",
